--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>
           <a href="https://www.rodrigofelga.com" target="_blank">Visit our website</a>
         </p>
-        <p class="address">123 Free Code Camp Drive</p>
+        <p class="address">St. Thomas, ON</p>
       </footer>
     </div>
   </body>
